@@ -59,11 +59,11 @@ IMAGE_CHOOSER_MODAL_ONLOAD_HANDLERS = {
         $('form.image-upload', modal.body).on('submit', function() {
             var formdata = new FormData(this);
 
-            if ($('#id_title', modal.body).val() == '') {
-                var li = $('#id_title', modal.body).closest('li');
+            if ($('#id_image-chooser-upload-title', modal.body).val() == '') {
+                var li = $('#id_image-chooser-upload-title', modal.body).closest('li');
                 if (!li.hasClass('error')) {
                     li.addClass('error');
-                    $('#id_title', modal.body).closest('.field-content').append('<p class="error-message"><span>This field is required.</span></p>')
+                    $('#id_image-chooser-upload-title', modal.body).closest('.field-content').append('<p class="error-message"><span>This field is required.</span></p>')
                 }
                 setTimeout(cancelSpinner, 500);
             } else {
@@ -106,11 +106,9 @@ IMAGE_CHOOSER_MODAL_ONLOAD_HANDLERS = {
         });
 
         function populateTitle(context) {
-            // Note: There are two inputs with `#id_title` on the page.
-            // The page title and image title. Select the input inside the modal body.
-            var fileWidget = $('#id_file', context);
+            var fileWidget = $('#id_image-chooser-upload-file', context);
             fileWidget.on('change', function () {
-                var titleWidget = $('#id_title', context);
+                var titleWidget = $('#id_image-chooser-upload-title', context);
                 var title = titleWidget.val();
                 if (title === '') {
                     // The file widget value example: `C:\fakepath\image.jpg`
@@ -122,11 +120,6 @@ IMAGE_CHOOSER_MODAL_ONLOAD_HANDLERS = {
         }
 
         populateTitle(modal.body);
-
-        /* Add tag entry interface (with autocompletion) to the tag field of the image upload form */
-        $('#id_tags', modal.body).tagit({
-            autocomplete: {source: jsonData['tag_autocomplete_url']}
-        });
     },
     'image_chosen': function(modal, jsonData) {
         modal.respond('imageChosen', jsonData['result']);
